# Sistemas-Operativos

./: README.md
P0_SO/: CMakeLists.txt  commands.c  commands.h  p0.c
P1/: CMakeLists.txt  Makefile  cmake_install.cmake  comandosP0.c  comandosP0.h  lista.c  lista.h  main.c
P2/: Makefile  comandosP0.h  comandosP1.c  comandosP1.h  comandosP2.c  comandosP2.h  lista.h  listaMemoriaP2.c  listaMemoriaP2.h  main.c
