cmake_minimum_required(VERSION 3.28.3)
# Nombre del proyecto
project(ShellProject)

# Especificar el est치ndar de C a usar (opcional)
set(CMAKE_C_STANDARD 11)

# Archivos fuente del proyecto
set(SOURCES
        main.c
        comandosP0.c
        lista.c
        lista.h
        comandosP0.h
        comandosP1.h
        comandosP1.c

)
# Incluir los directorios donde est치n los archivos de cabecera
include_directories(${CMAKE_SOURCE_DIR})

# A침adir el ejecutable, nombr치ndolo por ejemplo "shell"
add_executable(P1 ${SOURCES})



